update still not working

--- a/template.env
+++ b/template.env
@@ -1,2 +1,2 @@
-BOT_TOKEN="The token of your bot"
-KAI_ENDPOINT=http://your-koboldcpp-url:5001
+DISCORD_TOKEN="The token of your bot"
+KOBOLDCPP_API_URL=http://your-koboldcpp-url:5001
